@startuml
class observer.Client {
- String _name
- Product _subjectState
- JPanel productsPanel
- JScrollPane _scrollPane
+ void update(Subject)
+ String getName()
+ void getSubjectState()
+ void loadFrame()
}


interface observer.Observer {
+ void update(Subject)
+ String getName()
+ void loadFrame()
}

class subject.LaptopsSubject {
- List<Product> _products
- Product _lastProduct
+ void addProduct(Product)
+ Product getProducts()
+ boolean exists(String)
}


abstract class subject.Subject {
- ArrayList<Observer> _observers
+ boolean addObserver(Observer)
+ boolean removeObserver(Observer)
# void notifyUsers()
+ boolean clientExists(Observer)
+ {abstract}void addProduct(Product)
+ {abstract}Product getProducts()
+ {abstract}boolean exists(String)
}


class subject.MobilesSubject {
- List<Product> _products
- Product _lastProduct
+ void addProduct(Product)
+ Product getProducts()
+ boolean exists(String)
}


class subject.CpusSubject {
- List<Product> _products
- Product _lastProduct
+ void addProduct(Product)
+ Product getProducts()
+ boolean exists(String)
}


class gui.LoginFrame {
- JPanel _panel
- ObjectMapper _objectMapper
- Subject _mobiles
- Subject _laptops
- Subject _cpus
- List<Observer> _observers
+ void Start()
+ void login()
+ void register()
+ void addProduct()
+ void addProductOptions()
+ void addSuscriptions(String)
+ void loadSuscriptors()
+ void fetchData()
- boolean exists(String)
}


class Main {
+ {static} void main(String[])
}

class utils.Product {
- String _name
- double _price
- String _image
+ String getName()
+ void setName(String)
+ double getPrice()
+ void setPrice(double)
+ String getImage()
+ void setImage(String)
}




observer.Observer <|.. observer.Client
observer.JFrame <|-- observer.Client
subject.Subject <|-- subject.LaptopsSubject
subject.Subject <|-- subject.MobilesSubject
subject.Subject <|-- subject.CpusSubject
gui.JFrame <|-- gui.LoginFrame
@enduml